Extract features from states for circuit generation.
Guard against OOM due to buggy malloc and realloc implementations.

--- a/build.gradle
+++ b/build.gradle
@@ -241,7 +241,7 @@ task buildNativeLibrary(type: Exec, dependsOn: [jar]) {
         "owl.cinterface.CInterface", "libowl",
         "-cp", sourceSets.main.runtimeClasspath.asPath,
         enableNativeAssertions ? '-ea' : '-da',
-        "-DowlHeader=${projectDir}/src/main/headers",
+        "-DowlHeader=${projectDir}/src/main/c/headers",
         '--shared',
         '--initialize-at-build-time=owl,it,com,org,jhoafparser',
         '--no-fallback',
@@ -266,7 +266,7 @@ task buildNativeExecutable(type: Exec, dependsOn: [jar]) {
         "-jar", jar.archivePath,
         "-cp", sourceSets.main.runtimeClasspath.asPath,
         enableNativeAssertions ? '-ea' : '-da',
-        "-DowlHeader=${projectDir}/src/main/headers",
+        "-DowlHeader=${projectDir}/src/main/c/headers",
         '--initialize-at-build-time=owl,it,com,org,jhoafparser',
         '--no-fallback',
         '--no-server',
