Update Dockerfile [ci skip]

--- a/docker-build-environment/Dockerfile
+++ b/docker-build-environment/Dockerfile
@@ -13,23 +13,25 @@ ENV LANG C.UTF-8
 
 RUN apt-get -q update \
     && apt-get -q upgrade -y \
-    && apt-get -q install -y --no-install-recommends build-essential zlib1g-dev ca-certificates pandoc python3 python3-tabulate graphviz time gcc g++ make netcat unzip wget \
+    && apt-get -q install -y --no-install-recommends build-essential libz-dev zlib1g-dev ca-certificates pandoc python3 python3-tabulate graphviz time gcc g++ make unzip wget \
     && rm -rf /var/lib/apt/lists/*
 
 # GraalVM
 
 ## Download, verify, unpack, and install
 
-RUN wget -q https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.1.0/graalvm-ce-java11-linux-amd64-20.1.0.tar.gz \
-    && echo '18f2dc19652c66ccd5bd54198e282db645ea894d67357bf5e4121a9392fc9394 graalvm-ce-java11-linux-amd64-20.1.0.tar.gz' | sha256sum --check \
-    && tar -zxvf graalvm-ce-java11-linux-amd64-20.1.0.tar.gz \
-    && rm graalvm-ce-java11-linux-amd64-20.1.0.tar.gz \
-    && mv graalvm-ce-java11-20.1.0 /opt/
+RUN wget -q https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.3.0/graalvm-ce-java11-linux-amd64-20.3.0.tar.gz \
+    && echo '557aafd6f4fb8c103ce853adda452a7dc3eeca2ef1af00940b70efafe00fb3d5 graalvm-ce-java11-linux-amd64-20.3.0.tar.gz' | sha256sum --check \
+    && tar -zxvf graalvm-ce-java11-linux-amd64-20.3.0.tar.gz \
+    && rm graalvm-ce-java11-linux-amd64-20.3.0.tar.gz \
+    && mv graalvm-ce-java11-20.3.0 /opt/
 
-ENV PATH=/opt/graalvm-ce-java11-20.1.0/bin/:$PATH
-ENV JAVA_HOME=/opt/graalvm-ce-java11-20.1.0/
+ENV PATH=/opt/graalvm-ce-java11-20.3.0/bin/:$PATH
+ENV JAVA_HOME=/opt/graalvm-ce-java11-20.3.0/
 
-RUN gu install native-image
+RUN wget -q https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.3.0/native-image-installable-svm-java11-linux-amd64-20.3.0.jar \
+    && echo '6e67f3c5cc329956fe9bc33d571c2e771eff8f4f541bca275bb62744026d3726 native-image-installable-svm-java11-linux-amd64-20.3.0.jar' | sha256sum --check \
+    && gu -L install native-image-installable-svm-java11-linux-amd64-20.3.0.jar
 
 # Spot
 
