--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ before_script:
 
 stages:
   - build
-  - check
   - test
 
 variables:
@@ -22,43 +21,23 @@ Build:
     paths:
     - $GRADLE
   script:
-    - ./gradlew distZip
+    - ./gradlew check distZip
     - unzip -d build/unzipped build/distributions/*.zip
+    - scripts/check_binaries.sh build/unzipped/owl-*/bin
     - mv build/unzipped/owl-*/bin build
     - mv build/unzipped/owl-*/lib build
     - build/bin/owl --version
     - build/native-executable/owl-native --version
   artifacts:
+    reports:
+      junit: build/test-results/test/*.xml
     paths:
       - build/distributions
       - build/native-executable/reports
       - build/native-library/reports
       - build/reports
-    when: on_success
-    expire_in: 1 week
-
-# This should also be in the test stage, however we want to fail-fast if there is a stupid error
-# before starting all the expensive integration tests
-Check:
-  stage:
-    check
-  cache:
-    paths:
-      - $GRADLE
-  script:
-    - ./gradlew check
-    - unzip -d build/unzipped build/distributions/*.zip
-    - scripts/check_binaries.sh build/unzipped/owl-*/bin
-  artifacts:
-    reports:
-      junit: build/test-results/test/*.xml
-    paths:
-      - build/tmp/
-      - build/reports/
     when: always
-    expire_in: 1 hour
-  dependencies:
-    - Build
+    expire_in: 1 week
 
 # Templates
 
@@ -75,24 +54,6 @@ Check:
     expire_in: 1 week
   dependencies:
   - Build
-  when: manual
-
-.benchmark: &benchmark_template
-  stage: bench
-  script:
-    - unzip -d build/unzipped build/distributions/*.zip
-    - mv build/unzipped/owl-*/bin build
-    - mv build/unzipped/owl-*/lib build
-    - python3 scripts/util.py bench $BENCH_NAME | tee benchmark.txt
-  artifacts:
-    paths:
-    - benchmark.txt
-    when: always
-    expire_in: 1 week
-  when: manual
-  dependencies:
-  - Build
-
 
 # Tests
 
