Drop patched jhoafparser and provide fixed classes as sourcecode.

--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,7 @@ dependencies {
     implementation 'org.antlr:antlr4-runtime:4.8-1'
 
     // https://automata.tools/hoa/jhoafparser/
-    implementation files('lib/jhoafparser-1.1.1-patched.jar')
+    implementation files('lib/jhoafparser-1.1.1.jar')
 
     // https://www.graalvm.org/
     // https://mvnrepository.com/artifact/org.graalvm.sdk/graal-sdk
