--- a/build.gradle
+++ b/build.gradle
@@ -231,15 +231,16 @@ task buildNativeLibrary(type: Exec, dependsOn: [jar]) {
         enableNativeAssertions ? '-ea' : '-da',
         "-DowlHeader=${projectDir}/src/main/c/headers",
         '--shared',
-        '--initialize-at-build-time=owl,it,com,org,jhoafparser',
+        // (can cause deadlock during image-build)
+        '--initialize-at-build-time=com.google,org.apache,org.antlr,de.tum,owl,jhoafparser',
         '--no-fallback',
         '--no-server',
         // (uncomment for performance analysis)
         // '-H:+PrintAnalysisCallTree',
         // '-H:DashboardDump=reports/graalvm-dashboard.dump',
         // '-H:+DashboardAll',
-        '-H:+ReportExceptionStackTraces',
-        '-H:-UseServiceLoaderFeature',
+        // '-H:+ReportExceptionStackTraces',
+        // '-H:-UseServiceLoaderFeature',
         '-Djava.lang.Integer.IntegerCache.high=1024' // Cache more boxed integers.
 }
 
@@ -258,15 +259,16 @@ task buildNativeExecutable(type: Exec, dependsOn: [jar]) {
         "-cp", sourceSets.main.runtimeClasspath.asPath,
         enableNativeAssertions ? '-ea' : '-da',
         "-DowlHeader=${projectDir}/src/main/c/headers",
-        '--initialize-at-build-time=owl,it,com,org,jhoafparser',
+        // (can cause deadlock during image-build)
+        '--initialize-at-build-time=com.google,org.apache,org.antlr,de.tum,owl,jhoafparser',
         '--no-fallback',
         '--no-server',
         // (uncomment for performance analysis)
         // '-H:+PrintAnalysisCallTree',
         // '-H:DashboardDump=reports/graalvm-dashboard.dump',
         // '-H:+DashboardAll',
-        '-H:+ReportExceptionStackTraces',
-        '-H:-UseServiceLoaderFeature',
+        // '-H:+ReportExceptionStackTraces',
+        // '-H:-UseServiceLoaderFeature',
         '-Djava.lang.Integer.IntegerCache.high=1024' // Cache more boxed integers.
 }
 
