--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,24 @@ Size Regression Train:
     - data/formulas/sizes
     expire_in: 1 week
 
+## LTL Synthesis
+Symbolic LTL Synthesis:
+  stage: test
+  when: manual
+  script:
+    - unzip -d build/unzipped build/distributions/*.zip
+    - mv build/unzipped/owl-*/bin/owl-native build
+    - ./scripts/symbolic-synthesis.sh > result.csv
+  artifacts:
+    paths:
+      - result.csv
+    when: always
+    expire_in: 1 week
+  variables:
+    GIT_SUBMODULE_STRATEGY: "recursive"
+  dependencies:
+    - Build
+
 ## LTL to Automaton
 
 LTL2NBA:
