--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ plugins {
 apply plugin: 'java-library'
 apply plugin: 'application'
 apply plugin: 'antlr'
+apply plugin: 'java'
+apply plugin: 'c'
 
 // Static Analysis
 apply plugin: 'checkstyle'
@@ -41,6 +43,23 @@ project.version = '21.??-development'
 
 project.archivesBaseName = 'owl'
 project.mainClassName = 'owl.command.OwlCommand'
+
+def defaultEncoding = 'UTF-8'
+
+model {
+    components {
+        owlsylvan(NativeLibrarySpec) {
+            sources.c {
+                source {
+                    srcDir "src/main/c/source"
+                }
+                exportedHeaders {
+                    srcDir "src/main/c/headers"
+                }
+            }
+        }
+    }
+}
 
 java {
     toolchain {
@@ -146,7 +165,7 @@ tasks.withType(Test) {
 
 // ---------------- Native Compilation ----------------
 
-task buildNativeLibrary(type: Exec, dependsOn: [jar]) {
+task buildNativeLibrary(type: Exec, dependsOn: [jar, 'owlsylvanSharedLibrary']) {
     mkdir "${buildDir}/native-library"
     workingDir "${buildDir}/native-library"
 
@@ -161,6 +180,7 @@ task buildNativeLibrary(type: Exec, dependsOn: [jar]) {
         '--shared',
         // (can cause deadlock during image-build)
         '--initialize-at-build-time=com.google,org.apache,org.antlr,de.tum,owl,jhoafparser',
+        '--initialize-at-run-time=owl.bdd.sylvan.SylvanBddSetFactory',
         '--no-fallback',
         '--native-image-info',
         // (uncomment for performance analysis)
@@ -169,7 +189,8 @@ task buildNativeLibrary(type: Exec, dependsOn: [jar]) {
         // '-H:+DashboardAll',
         '-H:+ReportExceptionStackTraces',
         // '-H:-UseServiceLoaderFeature',
-        '-Djava.lang.Integer.IntegerCache.high=1024' // Cache more boxed integers.
+        '-Djava.lang.Integer.IntegerCache.high=1024', // Cache more boxed integers.
+        "-H:CLibraryPath=${buildDir}/libs/owlsylvan/shared"
 
     def cCompiler = System.getenv("CC")
     if (cCompiler != null) {
@@ -177,7 +198,7 @@ task buildNativeLibrary(type: Exec, dependsOn: [jar]) {
     }
 }
 
-task buildNativeExecutable(type: Exec, dependsOn: [jar]) {
+task buildNativeExecutable(type: Exec, dependsOn: [jar, 'owlsylvanSharedLibrary']) {
     mkdir "${buildDir}/native-executable"
     workingDir "${buildDir}/native-executable"
 
@@ -196,12 +217,14 @@ task buildNativeExecutable(type: Exec, dependsOn: [jar]) {
         '--initialize-at-build-time=com.google,org.apache,org.antlr,de.tum,owl,jhoafparser',
         '--no-fallback',
         '--native-image-info',
+        '--initialize-at-run-time=owl.bdd.sylvan.SylvanBddSetFactory',
         // (uncomment for performance analysis)
         // '-H:+PrintAnalysisCallTree',
         // '-H:DashboardDump=reports/graalvm-dashboard.dump',
         // '-H:+DashboardAll',
         '-H:+ReportExceptionStackTraces',
-        '-Djava.lang.Integer.IntegerCache.high=1024' // Cache more boxed integers.
+        '-Djava.lang.Integer.IntegerCache.high=1024', // Cache more boxed integers.
+        "-H:CLibraryPath=${buildDir}/libs/owlsylvan/shared"
 
     if (staticNativeExecutable) {
         args '--static'
